--- a/pyei/examples/santa_clara_demo.ipynb
+++ b/pyei/examples/santa_clara_demo.ipynb
@@ -492,6 +492,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ei.plot_intervals_by_precinct()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
