renaming plot_intervals to plot_intervals_by_precinct for rxc

--- a/pyei/examples/santa_clara_demo_r_by_c.ipynb
+++ b/pyei/examples/santa_clara_demo_r_by_c.ipynb
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "ei.plot_intervals('e_asian', 'Nadeem') # 95% credible intervals by precinct"
+    "ei.plot_intervals_by_precinct('e_asian', 'Nadeem') # 95% credible intervals by precinct"
    ]
   },
   {
