Refactor data.py, add tests.

--- a/pyei/examples/santa_clara_demo.ipynb
+++ b/pyei/examples/santa_clara_demo.ipynb
@@ -10,7 +10,7 @@
     "import pymc3 as pm\n",
     "from pyei.two_by_two import TwoByTwoEI\n",
     "from pyei.goodmans_er import GoodmansER\n",
-    "from pyei.data import get_data\n",
+    "from pyei.data import Datasets\n",
     "from pyei.plot_utils import tomography_plot"
    ]
   },
@@ -243,7 +243,7 @@
     }
    ],
    "source": [
-    "data = get_data(\"santaClara.csv\")\n",
+    "data = Datasets.Santa_Clara.to_dataframe()\n",
     "X = np.array(data[\"pct_e_asian_vote\"])\n",
     "T = np.array(data[\"pct_for_hardy2\"])\n",
     "N = np.array(data[\"total2\"])\n",
