--- a/pyei/examples/santa_clara_demo_r_by_c.ipynb
+++ b/pyei/examples/santa_clara_demo_r_by_c.ipynb
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import pymc3 as pm\n",
     "from pyei.r_by_c import RowByColumnEI\n",
-    "from pyei.data import get_data\n",
+    "from pyei.data import Datasets\n",
     "from pyei.plot_utils import plot_precinct_scatterplot"
    ]
   },
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = get_data(\"santaClara.csv\")\n",
+    "data = Datasets.Santa_Clara.to_dataframe()\n",
     "\n",
     "precinct_pops = np.array(data['total2'])\n",
     "votes_fractions = np.array(data[['pct_for_hardy2', 'pct_for_kolstad2', 'pct_for_nadeem2']]).T\n",
