Update with new notebook

--- a/pyei/examples/model_eval_and_comparison_demo.ipynb
+++ b/pyei/examples/model_eval_and_comparison_demo.ipynb
@@ -20,7 +20,7 @@
     "from matplotlib import pyplot as plt\n",
     "from pyei.two_by_two import TwoByTwoEI\n",
     "from pyei.goodmans_er import GoodmansER, GoodmansERBayes\n",
-    "from pyei.data import get_data"
+    "from pyei.data import Datasets"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Load example data\n",
-    "data = get_data(\"santaClara.csv\")\n",
+    "data = Datasets.Santa_Clara.to_dataset()\n",
     "X = np.array(data[\"pct_e_asian_vote\"])\n",
     "T = np.array(data[\"pct_for_hardy2\"])\n",
     "N = np.array(data[\"total2\"])\n",
