create default values for group and candidate names, r by c

--- a/pyei/examples/santa_clara_demo_r_by_c.ipynb
+++ b/pyei/examples/santa_clara_demo_r_by_c.ipynb
@@ -895,9 +895,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyei_kernel",
+   "display_name": "science",
    "language": "python",
-   "name": "pyei_kernel"
+   "name": "science"
   },
   "language_info": {
    "codemirror_mode": {
