--- a/pyei/examples/model_eval_and_comparison_demo.ipynb
+++ b/pyei/examples/model_eval_and_comparison_demo.ipynb
@@ -5307,9 +5307,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ei] *",
+   "display_name": "science",
    "language": "python",
-   "name": "conda-env-ei-py"
+   "name": "science"
   },
   "language_info": {
    "codemirror_mode": {
