--- a/pyei/examples/santa_clara_demo_r_by_c.ipynb
+++ b/pyei/examples/santa_clara_demo_r_by_c.ipynb
@@ -40,6 +40,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
