adding info aabout sampling parameters

--- a/pyei/intro_notebooks/PyEI_overview.ipynb
+++ b/pyei/intro_notebooks/PyEI_overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "rural-conviction",
+   "id": "vital-kinase",
    "metadata": {},
    "source": [
     "# PyEI Overview\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "australian-penny",
+   "id": "practical-laser",
    "metadata": {},
    "source": [
     "# Contents:\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "future-algorithm",
+   "id": "modified-oregon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revised-friend",
+   "id": "induced-jumping",
    "metadata": {},
    "source": [
     "# Loading data to use\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cognitive-tennessee",
+   "id": "institutional-foster",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "shaped-marketplace",
+   "id": "gorgeous-tutorial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,12 +328,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spectacular-devil",
+   "id": "institutional-pearl",
    "metadata": {},
    "source": [
     "# Fitting a model for EI\n",
     "\n",
-    "We fit most models by first creating a `TwoByTwoEI`, `RowByColumnEI` or object, which is initialized with a (required) model name that is chosen among the supported models and (if desired) the applicable model parameters, then calling its `fit` method, with the relevant data as arguments. We can also, optionally, pass arguments to specify sampling choices like the number of MCMC draws\n",
+    "We fit most models by first creating a `TwoByTwoEI`, `RowByColumnEI` or object, which is initialized with a (required) model name that is chosen among the supported models and (if desired) the applicable model parameters, then calling its `fit` method, with the relevant data as arguments. We can also, optionally, pass arguments to specify sampling choices like the number of MCMC draws.\n",
+    "\n",
+    "We also can pass to the fit() function of `TwoByTwoEI`, `RowByColumnEI`, or `GoodmanERBayes` additional keyword arguments for the sampler, such as:\n",
+    "\n",
+    "- draws - the number of samples to draw\n",
+    "- chains - the number of chains\n",
+    "- tune - number of iteration to tune\n",
+    "- cores - number of chains to run in parallel\n",
+    "\n",
+    "(see https://docs.pymc.io/api/inference.html sampling.sample for more)\n",
+    "E.g.:\n",
     "\n",
     "We fit a Goodman's ecological regression model by creating a `GoodmanER` or `GoodmanERBayes` object and then calling its fit method."
    ]
@@ -341,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "supported-arabic",
+   "id": "uniform-collectible",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "enclosed-dairy",
+   "id": "english-aberdeen",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dried-range",
+   "id": "attached-mixer",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "reduced-jimmy",
+   "id": "informal-convertible",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "historical-brush",
+   "id": "gothic-pleasure",
    "metadata": {},
    "source": [
     "# Plotting overview\n",
@@ -739,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "artificial-scott",
+   "id": "functional-behavior",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "allied-constraint",
+   "id": "vulnerable-lancaster",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "informed-martial",
+   "id": "unavailable-indonesia",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "stuck-utility",
+   "id": "waiting-porcelain",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "boring-diagram",
+   "id": "pleasant-security",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optimum-potter",
+   "id": "black-measure",
    "metadata": {},
    "source": [
     "# Reporting results overview\n",
@@ -917,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprising-convertible",
+   "id": "deadly-gothic",
    "metadata": {},
    "source": [
     "**Polity-wide posterior means and credible intervals of voter preferences:**"
@@ -926,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "assisted-inspection",
+   "id": "passive-identifier",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "organized-quebec",
+   "id": "concrete-procedure",
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dynamic-symposium",
+   "id": "disciplinary-cooler",
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "hourly-pierce",
+   "id": "federal-thanksgiving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infinite-wallet",
+   "id": "muslim-ultimate",
    "metadata": {},
    "source": [
     "**Precinct-level posterior means and credible intervals**:"
@@ -1030,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "freelance-optimization",
+   "id": "general-dictionary",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "female-mining",
+   "id": "curious-block",
    "metadata": {},
    "source": [
     "**Polarization**"
@@ -1063,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "adult-nerve",
+   "id": "suited-blade",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "prepared-cannon",
+   "id": "finite-brain",
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "gentle-forest",
+   "id": "expensive-renaissance",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "concrete-framework",
+   "id": "delayed-filling",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitting-stuart",
+   "id": "tired-indie",
    "metadata": {},
    "source": [
     "# Accessing samples\n",
@@ -1157,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "western-principal",
+   "id": "intelligent-german",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "enhanced-broadway",
+   "id": "northern-hammer",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reported-carol",
+   "id": "personal-college",
    "metadata": {},
    "source": [
     "# Currently supported models - quick reference\n",
@@ -1246,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "breeding-parks",
+   "id": "backed-words",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "structured-delay",
+   "id": "fancy-surgery",
    "metadata": {},
    "outputs": [
     {
