typo fixes and other small updates

--- a/pyei/intro_notebooks/Introduction_to_EI.ipynb
+++ b/pyei/intro_notebooks/Introduction_to_EI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "professional-tamil",
+   "id": "outdoor-arrival",
    "metadata": {},
    "source": [
     "# Introduction to Ecological Inference (EI)\n",
@@ -14,12 +14,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-dryer",
+   "id": "hydraulic-whole",
    "metadata": {},
    "source": [
     "## What is ecological inference?\n",
-    "\n",
-    "The problem of ecological inference is relevant in several fields, such as epidemiology, sociology, and political science. Our interest comes from the use of ecological inference in voting rights cases, as a tool to help investigate racially polarized voting. Thus, the examples and terminology in PyEI will refer to voting, although the library could be used to perform ecological inference in other contexts.\n",
     "\n",
     "We now describe the question that ecological inference seeks to answer in the context of estimating racially polarized voting. Suppose that you have $N$ precincts. Suppose that each of those precincts, you know the proportion of voters who belong to a particular demographic or racial group, *and* you know the voting results in that precinct - how many voters voted for each candidate. What is harder to know is how each demographic group voted - e.g. what percent of Black voters voted for candidate A? what percent of white voters voted for candidate B? Ecological inference seeks to estimate answers to those kinds of questions.\n",
     "\n",
@@ -28,23 +26,25 @@
     "\n",
     "For example, if we have r=3 groups, and c=2 candidates, then for each precinct we might have a table with known marginal values that looks something like the following:\n",
     "\n",
-    "|  Precint n  | Candidate A | Candidate B |               |\n",
+    "|  Precinct n  | Candidate A | Candidate B |               |\n",
     "| :---        | :---:        |    :----:   |          ---: |\n",
     "| Group 1     |  ?          | ?       |  0.6   |\n",
     "| Group 2     | ?           | ?       | 0.2      |\n",
     "| Group 3     | ?     | ?      | 0.2   |\n",
     "|    | 0.7   | 0.3       |       |\n",
     "\n",
-    "In this example, we know that in the nth precinct, candidate A got 70% of the vote and candidate B got 30% of the vote. We also know that 60% of the voters were in group 1, 20% in group 2, and 20% in group 3. What we would *like* to say is something about the polity-wide (i.e. across voters in all the relevant precincts) support of, say, Group 1 for Candidate A, or Group 3 for Candidate B.\n",
+    "In this example, we know that in the nth precinct, candidate A got 70% of the vote and candidate B got 30% of the vote. We also know that 60% of the voters were in group 1, 20% in group 2, and 20% in group 3. What we would *like* to say is something about the polity-wide (i.e. across voters in all the relevant precincts) support of, say, Group 1 for Candidate A, or Group 3 for Candidate B. \n",
     "\n",
     "Ecological inference yields estimates of these quantities of interest, so that after performing the ecological inference, we'll be able to say things like, \"Under the assumptions of (X ecological inference model), we estimate that across the polity (district, state, etc.), Y% of voters in Group 2 voted for Candidate B.\"\n",
     "\n",
-    "It is important to recognize that these are estimates! The estimates come from fitting statistical models to data. Many ecological inference methods also gives us ways of quantifying uncertainty, so that we can say something like, \"Under the assumptions of (X ecological inference model), there is a 95% probability that between Y% and Z% of voters in Group 2 voted for Candidate B.\" However, all ecological inference methods depend on specific models and assumptions that may or may not be appropriate for the data at hand, and thus it *is* possible for the results of ecological inference to place high probability on a value that is incorrect. Ecological inference is a challenging statistical problem."
+    "It is important to recognize that these are estimates! The estimates come from fitting statistical models to data. Many ecological inference methods also give us ways of quantifying uncertainty, so that we can say something like, \"Under the assumptions of (X ecological inference model), there is a 95% probability that between Y% and Z% of voters in Group 2 voted for Candidate B.\" However, all ecological inference methods depend on specific models and assumptions that may or may not be appropriate for the data at hand, and thus it *is* possible for the results of ecological inference to place high probability on a value that is incorrect. Ecological inference is a challenging statistical problem.\n",
+    "\n",
+    "The problem of ecological inference is relevant in several fields, such as epidemiology, sociology, and political science. Our interest comes from the use of ecological inference in voting rights cases, as a tool to help investigate racially polarized voting. Thus, the examples and terminology in PyEI will refer to voting, although the library could be used to perform ecological inference in other contexts."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "loved-admission",
+   "id": "found-kelly",
    "metadata": {},
    "source": [
     "## What kind of data do I need for ecological inference?"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integral-consensus",
+   "id": "tamil-crawford",
    "metadata": {},
    "source": [
     "We need to provide an ecological inference method with the data *for each precinct* about:\n",
@@ -69,18 +69,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protected-subscriber",
+   "id": "following-gospel",
    "metadata": {},
    "source": [
     "#### Example\n",
     "\n",
-    "PyEI includes tools for accessing some example datasets. Here we hav data that gives the proportion of voters in each of r=3 groups (`ind`, `e_asian`, `non_asian`) for each of c=3 candidates (`Hardy`, `Kolstad`, `Nadeem`). There are N=42 precincts in this dataset. We can examine the shape of the input data and see how the group and vote percentages within each precint sum to 1.\n"
+    "PyEI includes tools for accessing some example datasets. Here we have data that gives the proportion of voters in each of r=3 groups (`ind`, `e_asian`, `non_asian`) for each of c=3 candidates (`Hardy`, `Kolstad`, `Nadeem`). There are N=42 precincts in this dataset. We can examine the shape of the input data and see how the group and vote percentages within each precinct sum to 1.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "finnish-williams",
+   "execution_count": 17,
+   "id": "metric-madness",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-commerce",
+   "id": "swiss-dryer",
    "metadata": {},
    "source": [
     "## What does it mean that most of the models supported by PyEI are Bayesian models and that inference proceeds via sampling methods, and what does that mean for interpreting the results?"
@@ -120,15 +120,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaging-juice",
+   "id": "instructional-layout",
    "metadata": {},
    "source": [
-    "At a basic level, these Bayesian models each make some assumptions about various parameters (like the percentage of Group 1 who voted for candidate A in precint n), how likely they are a priori to take different values and how they relate to each other and observed data (like the percentage of the population of interest who voted for candidate A in precint n). We then want to compute the probability of these parameters taking on values given the observed data - their *posterior probability*. \n"
+    "At a basic level, these Bayesian models each make some assumptions about various parameters (like the percentage of Group 1 who voted for candidate A in precinct n), how likely they are a priori to take different values and how they relate to each other and observed data (like the percentage of the population of interest who voted for candidate A in precinct n). We then want to compute the probability of these parameters taking on values given the observed data - their *posterior probability*. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "mature-hours",
+   "id": "shared-modem",
    "metadata": {},
    "source": [
     "We're not *sure* about the value of the parameters, even after seeing the data, we just have an idea of which values are more and less likely. Despite the lack of certainty, the kind of probabilistic information that we have is very helpful. It allows us to make estimates like \"there is a 95% probability that the support of Group 1 for Candidate A is between 0.25 and 0.46 (under the assumptions of the model)\".\n",
@@ -145,7 +145,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "metric-columbus",
+   "id": "formal-toronto",
    "metadata": {},
    "source": [
     "![image.png](attachment:f1ab7d55-e849-4697-93e8-3b61bad11455.png)"
@@ -153,27 +153,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frequent-hardwood",
+   "id": "pointed-medication",
    "metadata": {},
    "source": [
-    "In PyEI and other existing tools for ecological inference, the posterior probability distributions of the sort visualized above are obtained via MCMC sampling. That means that to learn about the posterior distributions of the parameters, we use methods that yield *samples* from the posterior probability distributions of all of the parameters. The idea of sampling is like learning about the distribution of how a die lands by rolling the die many times and observing what happen -- we can use a finite set of observations to estimate that the probability of rolling a two is about 1/6, if we cound that about 1/6 of our rolls were twos. We use MCMC methods to generate, say, 1000 samples from the posterior distribution (or some other appropriately large number). If we have 1000 samples from the posterior distribution, and 813 of them are greater than X, we can estimate that the posterior probability that the parameter is above X is 81.3%. PyEI includes a number of built-in methods for summarizing the posterior distributions, but the samples are directly accessible as well, and it can be helpful to know that they are there.  "
+    "In PyEI and other existing tools for ecological inference, the posterior probability distributions of the sort visualized above are obtained via MCMC sampling. That means that to learn about the posterior distributions of the parameters, we use methods that yield *samples* from the posterior probability distributions of all of the parameters. The idea of sampling is like learning about the distribution of how a die lands by rolling the die many times and observing what happen -- we can use a finite set of observations to estimate that the probability of rolling a two is about 1/6, if we count that about 1/6 of our rolls were twos. We use MCMC methods to generate, say, 1000 samples from the posterior distribution (or some other appropriately large number). If we have 1000 samples from the posterior distribution, and 813 of them are greater than X, we can estimate that the posterior probability that the parameter is above X is 81.3%. PyEI includes a number of built-in methods for summarizing the posterior distributions, but the samples are directly accessible as well, and it can be helpful to know that they are there.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "young-knock",
+   "id": "boolean-function",
    "metadata": {},
    "source": [
     "There is LOTS more to say about Bayesian modeling, and of course also much to say specifically about the models for ecological inference that are implemented in PyEI! There are also plenty of things that can go wrong with this kind of sampling - for example, you may see alerts about problems during sampling  that may indicate that the posterior distribution is not adequately being sampled from and we should be concerned (PyEI may be more vocal than existing tools about alerting you to such problems). This overview is not meant to be comprehensive, but just to give a bit of helpful background as you dig deeper."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "opposite-challenge",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
