adding error message when non-integer precinct_pops are given

--- a/pyei/intro_notebooks/Introduction_to_EI.ipynb
+++ b/pyei/intro_notebooks/Introduction_to_EI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "outdoor-arrival",
+   "id": "infrared-dance",
    "metadata": {},
    "source": [
     "# Introduction to Ecological Inference (EI)\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hydraulic-whole",
+   "id": "nuclear-customs",
    "metadata": {},
    "source": [
     "## What is ecological inference?\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "found-kelly",
+   "id": "quiet-synthesis",
    "metadata": {},
    "source": [
     "## What kind of data do I need for ecological inference?"
@@ -52,12 +52,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tamil-crawford",
+   "id": "radical-creature",
    "metadata": {},
    "source": [
     "We need to provide an ecological inference method with the data *for each precinct* about:\n",
-    "- the fraction of the population of interest in each of the r demographic groups (should add to 1 within each precint)\n",
-    "- the fraction of the population of interest voting for each of the c candidates or voting outcomes (should add to 1 within each precint)\n",
+    "- the fraction of the population of interest in each of the r demographic groups (should add to 1 within each precinct)\n",
+    "- the fraction of the population of interest voting for each of the c candidates or voting outcomes (should add to 1 within each precinct)\n",
     "\n",
     "And for many methods we also need:\n",
     "- the number of people in the population of interest of each precinct\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "following-gospel",
+   "id": "sharp-order",
    "metadata": {},
    "source": [
     "#### Example\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "metric-madness",
+   "id": "grand-fraud",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swiss-dryer",
+   "id": "french-savannah",
    "metadata": {},
    "source": [
     "## What does it mean that most of the models supported by PyEI are Bayesian models and that inference proceeds via sampling methods, and what does that mean for interpreting the results?"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instructional-layout",
+   "id": "effective-initial",
    "metadata": {},
    "source": [
     "At a basic level, these Bayesian models each make some assumptions about various parameters (like the percentage of Group 1 who voted for candidate A in precinct n), how likely they are a priori to take different values and how they relate to each other and observed data (like the percentage of the population of interest who voted for candidate A in precinct n). We then want to compute the probability of these parameters taking on values given the observed data - their *posterior probability*. \n"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "shared-modem",
+   "id": "important-clark",
    "metadata": {},
    "source": [
     "We're not *sure* about the value of the parameters, even after seeing the data, we just have an idea of which values are more and less likely. Despite the lack of certainty, the kind of probabilistic information that we have is very helpful. It allows us to make estimates like \"there is a 95% probability that the support of Group 1 for Candidate A is between 0.25 and 0.46 (under the assumptions of the model)\".\n",
@@ -145,7 +145,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "formal-toronto",
+   "id": "joint-drive",
    "metadata": {},
    "source": [
     "![image.png](attachment:f1ab7d55-e849-4697-93e8-3b61bad11455.png)"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pointed-medication",
+   "id": "prompt-rebel",
    "metadata": {},
    "source": [
     "In PyEI and other existing tools for ecological inference, the posterior probability distributions of the sort visualized above are obtained via MCMC sampling. That means that to learn about the posterior distributions of the parameters, we use methods that yield *samples* from the posterior probability distributions of all of the parameters. The idea of sampling is like learning about the distribution of how a die lands by rolling the die many times and observing what happen -- we can use a finite set of observations to estimate that the probability of rolling a two is about 1/6, if we count that about 1/6 of our rolls were twos. We use MCMC methods to generate, say, 1000 samples from the posterior distribution (or some other appropriately large number). If we have 1000 samples from the posterior distribution, and 813 of them are greater than X, we can estimate that the posterior probability that the parameter is above X is 81.3%. PyEI includes a number of built-in methods for summarizing the posterior distributions, but the samples are directly accessible as well, and it can be helpful to know that they are there.  "
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-function",
+   "id": "annoying-major",
    "metadata": {},
    "source": [
     "There is LOTS more to say about Bayesian modeling, and of course also much to say specifically about the models for ecological inference that are implemented in PyEI! There are also plenty of things that can go wrong with this kind of sampling - for example, you may see alerts about problems during sampling  that may indicate that the posterior distribution is not adequately being sampled from and we should be concerned (PyEI may be more vocal than existing tools about alerting you to such problems). This overview is not meant to be comprehensive, but just to give a bit of helpful background as you dig deeper."
